[project]
name = "asic-rs-toolkit"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21",
    "fastapi>=0.116",
    "platformdirs>=4.3",
    "pyasic-rs>=0.7.2",
    "pydantic>=2.11",
    "pywebview[qt]>=6.2.1",
    "uvicorn[standard]>=0.35",
]

[project.scripts]
asic-rs-toolkit = "asic_rs_toolkit.cli:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.14",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asic_rs_toolkit*"]

[tool.setuptools.package-data]
asic_rs_toolkit = ["static/*.html", "static/*.css", "static/*.js", "static/assets/*.svg", "static/assets/*.ico"]

[tool.uv.sources]
pyasic-rs = { git = "https://github.com/256foundation/asic-rs.git", rev = "refs/pull/316/head" }
